k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: dev
  labels:
    app: hello-world
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hello-world
