k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: hello.mycompany.com
      http:
        paths:
          - backend:
              service:
                name: hello-world
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hello.mycompany.com
      secretName: tls-certificate
